--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "calculadora-matrices",
   "private": true,
-  "version": "1.0.74",
+  "version": "1.0.741",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -48,6 +48,7 @@
     "input-otp": "^1.4.2",
     "katex": "^0.16.23",
     "lucide-react": "^0.544.0",
+    "mathjs": "^14.8.2",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.0",
